# GolangRustNodeApiAddOn

./: Cargo.toml  LICENSE  build.rs  package-lock.json  package.json
__test__/: index.spec.mjs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  readFile.go
