[package]
edition = "2021"
name = "firstrustaddoncgo"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.5.0", default-features = false, features = ["napi4","tokio_rt"] }
napi-derive = "2.5.0"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
bindgen = "0.60.1"
gobuild = "0.1.0-alpha.1"
napi-build = "2.0.1"

[profile.release]
lto = true
